Added additional properties and updated data sources with passwords.

--- a/bootstrap.properties
+++ b/bootstrap.properties
@@ -4,3 +4,9 @@ ICRESTURL=http://localhost/ic
 APPLICATION_ID=QMAT
 QMAT_VIRUSCAN_STATUS=inactive
 ENV_NAME=LOCAL
+QMAT_LOG_DIR=logs
+QMAT_SCHEMA=QMAT2
+FRWK_SCHEMA=FRWK2
+COTS_SCHEMA=COTS2
+des.scheduler.expression=0 0/2 * * * ?
+des.enabled=false
