Update README and add additional properties.

--- a/bootstrap.properties
+++ b/bootstrap.properties
@@ -8,5 +8,6 @@ QMAT_LOG_DIR=logs
 QMAT_SCHEMA=QMAT2
 FRWK_SCHEMA=FRWK2
 COTS_SCHEMA=COTS2
-des.scheduler.expression=0 0/2 * * * ?
-des.enabled=false
+des.scheduler.expression=0/1 * * * * ?
+des.enabled=true
+spring.profiles.active=local
