Cron exp and des fixes

--- a/bootstrap.properties
+++ b/bootstrap.properties
@@ -1,5 +1,5 @@
-ic.user.update.sch.exp=0 * * * * *
-eft.file.scan.sch.exp=0 * * * * *
+ic.user.update.sch.exp=59 59 23 30 11 ? 
+eft.file.scan.sch.exp=0 */5 * * * ?
 ICRESTURL=http://localhost/ic
 APPLICATION_ID=QMAT
 QMAT_VIRUSCAN_STATUS=inactive
@@ -8,6 +8,6 @@ QMAT_LOG_DIR=logs
 QMAT_SCHEMA=QMAT2
 FRWK_SCHEMA=FRWK2
 COTS_SCHEMA=COTS2
-des.scheduler.expression=0/1 * * * * ?
+des.scheduler.expression=0 0/1 * * * ?
 des.enabled=true
 spring.profiles.active=local
