Working with debug enabled.

--- a/bootstrap.properties
+++ b/bootstrap.properties
@@ -4,10 +4,14 @@ ICRESTURL=http://localhost/ic
 APPLICATION_ID=QMAT
 QMAT_VIRUSCAN_STATUS=inactive
 ENV_NAME=LOCAL
-QMAT_LOG_DIR=logs
-QMAT_SCHEMA=QMAT2
-FRWK_SCHEMA=FRWK2
-COTS_SCHEMA=COTS2
+QMAT_LOG_DIR=C:\Qmat\LibertyPortletConfiguration\logs
+QMAT_SCHEMA=QMAT
+FRWK_SCHEMA=FRWK
+COTS_SCHEMA=COTS
 des.scheduler.expression=0 0/1 * * * ?
-des.enabled=true
+des.enabled=false
 spring.profiles.active=local
+des.batch.db.reader.pageSize=100
+qmat.cec.outbound.esco.filepattern=T#EFT.ON.E9999
+qmat.cec.outbound.bene.filepattern=T#EFT.ON.E9999
+qmat.cec.outbound.event.filepattern=T#EFT.ON.E9999
